--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -176,5 +176,8 @@
     <ClInclude Include="src\compiler\compiler.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\bu\timer.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
