--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -210,6 +210,7 @@
       <DisableLanguageExtensions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DisableLanguageExtensions>
     </ClCompile>
     <ClCompile Include="src\bu\source.cpp" />
+    <ClCompile Include="src\cli\cli.cpp" />
     <ClCompile Include="src\compiler\compiler.cpp" />
     <ClCompile Include="src\compiler\scope.cpp" />
     <ClCompile Include="src\compiler\size_of.cpp" />
@@ -258,6 +259,7 @@
     <ClInclude Include="src\bu\uninitialized.hpp" />
     <ClInclude Include="src\bu\utilities.hpp" />
     <ClInclude Include="src\bu\wrapper.hpp" />
+    <ClInclude Include="src\cli\cli.hpp" />
     <ClInclude Include="src\compiler\codegen_internals.hpp" />
     <ClInclude Include="src\compiler\compiler.hpp" />
     <ClInclude Include="src\lexer\lexer.hpp" />
