--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClCompile Include="src\compiler\compiler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\cli\cli.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
@@ -177,6 +180,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\bu\timer.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\cli\cli.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
