--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="src\cli\cli.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\vm\serializing.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
