--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClCompile Include="src\vm\serializing.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\compiler\resolution\resolution.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
@@ -186,6 +189,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\cli\cli.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\compiler\resolution\ir.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\compiler\resolution\resolution.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
