--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -212,6 +212,7 @@
     <ClCompile Include="src\bu\source.cpp" />
     <ClCompile Include="src\cli\cli.cpp" />
     <ClCompile Include="src\compiler\compiler.cpp" />
+    <ClCompile Include="src\compiler\resolution\resolution.cpp" />
     <ClCompile Include="src\compiler\scope.cpp" />
     <ClCompile Include="src\compiler\size_of.cpp" />
     <ClCompile Include="src\compiler\type_of.cpp" />
@@ -269,6 +270,8 @@
     <ClInclude Include="src\lexer\token_formatting.hpp" />
     <ClInclude Include="src\parser\parser.hpp" />
     <ClInclude Include="src\parser\internals\parser_internals.hpp" />
+    <ClInclude Include="src\compiler\resolution\ir.hpp" />
+    <ClInclude Include="src\compiler\resolution\resolution.hpp" />
     <ClInclude Include="src\tests\tests.hpp" />
     <ClInclude Include="src\vm\bytecode.hpp" />
     <ClInclude Include="src\vm\opcode.hpp" />
