--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="src\compiler\resolution\resolution.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\compiler\resolution\resolve_type.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
@@ -195,6 +198,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\compiler\resolution\resolution.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\compiler\resolution\resolution_internals.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
