Added ir formatting

--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -212,6 +212,7 @@
     <ClCompile Include="src\cli\cli.cpp" />
     <ClCompile Include="src\compiler\compiler.cpp" />
     <ClCompile Include="src\compiler\resolution\definition_resolution.cpp" />
+    <ClCompile Include="src\compiler\resolution\ir_formatting.cpp" />
     <ClCompile Include="src\compiler\resolution\resolution.cpp" />
     <ClCompile Include="src\compiler\resolution\type_resolution.cpp" />
     <ClCompile Include="src\compiler\scope.cpp" />
@@ -262,6 +263,7 @@
     <ClInclude Include="src\cli\cli.hpp" />
     <ClInclude Include="src\compiler\codegen_internals.hpp" />
     <ClInclude Include="src\compiler\compiler.hpp" />
+    <ClInclude Include="src\compiler\resolution\ir_formatting.hpp" />
     <ClInclude Include="src\compiler\resolution\resolution_internals.hpp" />
     <ClInclude Include="src\lexer\lexer.hpp" />
     <ClInclude Include="src\bu\textual_error.hpp" />
