--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -212,6 +212,7 @@
     <ClCompile Include="src\cli\cli.cpp" />
     <ClCompile Include="src\compiler\compiler.cpp" />
     <ClCompile Include="src\compiler\resolution\definition_resolution.cpp" />
+    <ClCompile Include="src\compiler\resolution\expression_resolution.cpp" />
     <ClCompile Include="src\compiler\resolution\ir_formatting.cpp" />
     <ClCompile Include="src\compiler\resolution\resolution.cpp" />
     <ClCompile Include="src\compiler\resolution\type_resolution.cpp" />
