Moved things around

--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -210,12 +210,12 @@
     </ClCompile>
     <ClCompile Include="src\bu\source.cpp" />
     <ClCompile Include="src\cli\cli.cpp" />
-    <ClCompile Include="src\compiler\compiler.cpp" />
-    <ClCompile Include="src\compiler\resolution\definition_resolution.cpp" />
-    <ClCompile Include="src\compiler\resolution\expression_resolution.cpp" />
-    <ClCompile Include="src\compiler\resolution\ir_formatting.cpp" />
-    <ClCompile Include="src\compiler\resolution\resolution.cpp" />
-    <ClCompile Include="src\compiler\resolution\type_resolution.cpp" />
+    <ClCompile Include="src\codegen\codegen.cpp" />
+    <ClCompile Include="src\resolution\definition_resolution.cpp" />
+    <ClCompile Include="src\resolution\expression_resolution.cpp" />
+    <ClCompile Include="src\ir\ir_formatting.cpp" />
+    <ClCompile Include="src\resolution\resolution.cpp" />
+    <ClCompile Include="src\resolution\type_resolution.cpp" />
     <ClCompile Include="src\lexer\lexer.cpp" />
     <ClCompile Include="src\tests\lexer_test.cpp" />
     <ClCompile Include="src\bu\textual_error.cpp" />
@@ -261,18 +261,18 @@
     <ClInclude Include="src\bu\utilities.hpp" />
     <ClInclude Include="src\bu\wrapper.hpp" />
     <ClInclude Include="src\cli\cli.hpp" />
-    <ClInclude Include="src\compiler\codegen_internals.hpp" />
-    <ClInclude Include="src\compiler\compiler.hpp" />
-    <ClInclude Include="src\compiler\resolution\ir_formatting.hpp" />
-    <ClInclude Include="src\compiler\resolution\resolution_internals.hpp" />
+    <ClInclude Include="src\codegen\codegen_internals.hpp" />
+    <ClInclude Include="src\codegen\codegen.hpp" />
+    <ClInclude Include="src\ir\ir_formatting.hpp" />
+    <ClInclude Include="src\resolution\resolution_internals.hpp" />
     <ClInclude Include="src\lexer\lexer.hpp" />
     <ClInclude Include="src\bu\textual_error.hpp" />
     <ClInclude Include="src\lexer\token.hpp" />
     <ClInclude Include="src\lexer\token_formatting.hpp" />
     <ClInclude Include="src\parser\parser.hpp" />
     <ClInclude Include="src\parser\internals\parser_internals.hpp" />
-    <ClInclude Include="src\compiler\resolution\ir.hpp" />
-    <ClInclude Include="src\compiler\resolution\resolution.hpp" />
+    <ClInclude Include="src\ir\ir.hpp" />
+    <ClInclude Include="src\resolution\resolution.hpp" />
     <ClInclude Include="src\tests\tests.hpp" />
     <ClInclude Include="src\vm\bytecode.hpp" />
     <ClInclude Include="src\vm\opcode.hpp" />
