--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -200,5 +200,8 @@
     <ClInclude Include="src\ir\ir_formatting.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\tests\internals\test_internals.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
