--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -249,6 +249,7 @@
     <ClInclude Include="src\ast\nodes\pattern.hpp" />
     <ClInclude Include="src\ast\nodes\definition.hpp" />
     <ClInclude Include="src\ast\nodes\type.hpp" />
+    <ClInclude Include="src\bu\bounded_integer.hpp" />
     <ClInclude Include="src\bu\bytestack.hpp" />
     <ClInclude Include="src\bu\color.hpp" />
     <ClInclude Include="src\bu\disable_unnecessary_warnings.hpp" />
