--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -211,6 +211,7 @@
     <ClCompile Include="src\bu\source.cpp" />
     <ClCompile Include="src\cli\cli.cpp" />
     <ClCompile Include="src\codegen\codegen.cpp" />
+    <ClCompile Include="src\resolution\bind_pattern.cpp" />
     <ClCompile Include="src\resolution\definition_resolution.cpp" />
     <ClCompile Include="src\resolution\expression_resolution.cpp" />
     <ClCompile Include="src\ir\ir_formatting.cpp" />
