Specialized std::hash for ir::Type

--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="src\resolution\bind_pattern.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\ir\ir_hashing.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
