Added template argument resolution

--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="src\ir\ir_hashing.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\resolution\resolution_internals.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
