--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -216,6 +216,7 @@
     <ClCompile Include="src\resolution\expression_resolution.cpp" />
     <ClCompile Include="src\ir\ir_formatting.cpp" />
     <ClCompile Include="src\resolution\resolution.cpp" />
+    <ClCompile Include="src\resolution\resolution_internals.cpp" />
     <ClCompile Include="src\resolution\type_resolution.cpp" />
     <ClCompile Include="src\lexer\lexer.cpp" />
     <ClCompile Include="src\tests\lexer_test.cpp" />
