--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -213,4 +213,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="vmt22a.natvis" />
+  </ItemGroup>
 </Project>
