--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -210,11 +210,10 @@
     </ClCompile>
     <ClCompile Include="src\bu\source.cpp" />
     <ClCompile Include="src\cli\cli.cpp" />
-    <ClCompile Include="src\codegen\codegen.cpp" />
-    <ClCompile Include="src\ir\ir_hashing.cpp" />
+    <ClCompile Include="src\tst\tst_hashing.cpp" />
     <ClCompile Include="src\resolution\bind_pattern.cpp" />
     <ClCompile Include="src\resolution\expression_resolution.cpp" />
-    <ClCompile Include="src\ir\ir_formatting.cpp" />
+    <ClCompile Include="src\tst\tst_formatting.cpp" />
     <ClCompile Include="src\resolution\namespace_lookup.cpp" />
     <ClCompile Include="src\resolution\resolution.cpp" />
     <ClCompile Include="src\resolution\resolution_internals.cpp" />
@@ -240,6 +239,7 @@
     <ClCompile Include="src\parser\parser.cpp" />
     <ClCompile Include="src\tests\parser_test.cpp" />
     <ClCompile Include="src\tests\tests.cpp" />
+    <ClCompile Include="src\typechecker\typechecker.cpp" />
     <ClCompile Include="src\vm\serializing.cpp" />
     <ClCompile Include="src\vm\virtual_machine.cpp" />
     <ClCompile Include="src\vm\vm_formatting.cpp" />
@@ -264,9 +264,7 @@
     <ClInclude Include="src\bu\utilities.hpp" />
     <ClInclude Include="src\bu\wrapper.hpp" />
     <ClInclude Include="src\cli\cli.hpp" />
-    <ClInclude Include="src\codegen\codegen_internals.hpp" />
-    <ClInclude Include="src\codegen\codegen.hpp" />
-    <ClInclude Include="src\ir\ir_formatting.hpp" />
+    <ClInclude Include="src\tst\tst_formatting.hpp" />
     <ClInclude Include="src\resolution\resolution_internals.hpp" />
     <ClInclude Include="src\lexer\lexer.hpp" />
     <ClInclude Include="src\bu\textual_error.hpp" />
@@ -274,10 +272,11 @@
     <ClInclude Include="src\lexer\token_formatting.hpp" />
     <ClInclude Include="src\parser\parser.hpp" />
     <ClInclude Include="src\parser\internals\parser_internals.hpp" />
-    <ClInclude Include="src\ir\ir.hpp" />
+    <ClInclude Include="src\tst\tst.hpp" />
     <ClInclude Include="src\resolution\resolution.hpp" />
     <ClInclude Include="src\tests\internals\test_internals.hpp" />
     <ClInclude Include="src\tests\tests.hpp" />
+    <ClInclude Include="src\typechecker\typechecker.hpp" />
     <ClInclude Include="src\vm\bytecode.hpp" />
     <ClInclude Include="src\vm\opcode.hpp" />
     <ClInclude Include="src\vm\virtual_machine.hpp" />
