Added a simple configuration parser

--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="src\typechecker\typechecker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\language\configuration.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
@@ -204,6 +207,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\typechecker\typechecker.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\language\configuration.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
