--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -212,6 +212,7 @@
     </ClCompile>
     <ClCompile Include="src\bu\source.cpp" />
     <ClCompile Include="src\cli\cli.cpp" />
+    <ClCompile Include="src\language\configuration.cpp" />
     <ClCompile Include="src\tst\tst_hashing.cpp" />
     <ClCompile Include="src\resolution\bind_pattern.cpp" />
     <ClCompile Include="src\resolution\expression_resolution.cpp" />
@@ -266,6 +267,7 @@
     <ClInclude Include="src\bu\utilities.hpp" />
     <ClInclude Include="src\bu\wrapper.hpp" />
     <ClInclude Include="src\cli\cli.hpp" />
+    <ClInclude Include="src\language\configuration.hpp" />
     <ClInclude Include="src\tst\tst_formatting.hpp" />
     <ClInclude Include="src\resolution\resolution_internals.hpp" />
     <ClInclude Include="src\lexer\lexer.hpp" />
