--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -236,9 +236,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">bu/utilities.hpp</PrecompiledHeaderFile>
     </ClCompile>
-    <ClCompile Include="src\parser\internals\parse_expression.cpp" />
-    <ClCompile Include="src\parser\internals\parse_pattern.cpp" />
-    <ClCompile Include="src\parser\internals\parse_type.cpp" />
+    <ClCompile Include="src\parser\parse_expression.cpp" />
+    <ClCompile Include="src\parser\parse_pattern.cpp" />
+    <ClCompile Include="src\parser\parse_type.cpp" />
     <ClCompile Include="src\parser\parser.cpp" />
     <ClCompile Include="src\tests\parser_test.cpp" />
     <ClCompile Include="src\tests\tests.cpp" />
@@ -275,7 +275,7 @@
     <ClInclude Include="src\lexer\token.hpp" />
     <ClInclude Include="src\lexer\token_formatting.hpp" />
     <ClInclude Include="src\parser\parser.hpp" />
-    <ClInclude Include="src\parser\internals\parser_internals.hpp" />
+    <ClInclude Include="src\parser\parser_internals.hpp" />
     <ClInclude Include="src\tst\tst.hpp" />
     <ClInclude Include="src\resolution\resolution.hpp" />
     <ClInclude Include="src\tests\tests.hpp" />
