Removed bu::textual_error and replaced it with bu::diagnostics::Builder, which allows emission of non-fatal diagnostic messages such as notes and warnings

--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -51,9 +51,6 @@
     <ClCompile Include="src\bu\source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\bu\textual_error.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\bu\color.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -111,6 +108,9 @@
     <ClCompile Include="src\hir\hir_formatting.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\bu\diagnostics.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
@@ -156,9 +156,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\bu\source.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\bu\textual_error.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\bu\color.hpp">
@@ -228,6 +225,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\ast\lower\lowering_internals.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\bu\diagnostics.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
