--- a/vmt22a.vcxproj
+++ b/vmt22a.vcxproj
@@ -216,6 +216,7 @@
       <DisableLanguageExtensions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DisableLanguageExtensions>
       <DisableLanguageExtensions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DisableLanguageExtensions>
     </ClCompile>
+    <ClCompile Include="src\bu\diagnostics.cpp" />
     <ClCompile Include="src\bu\source.cpp" />
     <ClCompile Include="src\cli\cli.cpp" />
     <ClCompile Include="src\dependency\dependency.cpp" />
@@ -225,7 +226,6 @@
     <ClCompile Include="src\tst\tst_formatting.cpp" />
     <ClCompile Include="src\lexer\lexer.cpp" />
     <ClCompile Include="src\lexer\lexer_test.cpp" />
-    <ClCompile Include="src\bu\textual_error.cpp" />
     <ClCompile Include="src\lexer\token_formatting.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\bu\utilities.cpp">
@@ -261,6 +261,7 @@
     <ClInclude Include="src\bu\bounded_integer.hpp" />
     <ClInclude Include="src\bu\bytestack.hpp" />
     <ClInclude Include="src\bu\color.hpp" />
+    <ClInclude Include="src\bu\diagnostics.hpp" />
     <ClInclude Include="src\bu\disable_unnecessary_warnings.hpp" />
     <ClInclude Include="src\bu\flatmap.hpp" />
     <ClInclude Include="src\bu\noisy.hpp" />
@@ -278,7 +279,6 @@
     <ClInclude Include="src\hir\nodes\type.hpp" />
     <ClInclude Include="src\language\configuration.hpp" />
     <ClInclude Include="src\lexer\lexer.hpp" />
-    <ClInclude Include="src\bu\textual_error.hpp" />
     <ClInclude Include="src\lexer\token.hpp" />
     <ClInclude Include="src\lexer\token_formatting.hpp" />
     <ClInclude Include="src\parser\parser.hpp" />
