--- a/vmt22a.vcxproj.filters
+++ b/vmt22a.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="src\inference\inference.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\hir\shared_formatting.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bu\utilities.hpp">
@@ -231,6 +234,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\inference\inference.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\inference\type.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
